fixed alignment for new messages

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -38,6 +38,9 @@ body {
   flex: 2;
 }
 
+.messages {
+  padding-left: 25px;
+}
 .message {
   display: flex;
   padding: 5px;
